# astral

./: .gitignore  .pre-commit-config.yaml  README.md  package-lock.json  pyproject.toml  tailwind.config.js  tasks.py
astral/templates/cotton/: button.html  button_or_link.html  card.html  loading.html  tooltip.html
astral/templates/cotton/icon/: academic_cap.html  adjustments_horizontal.html  adjustments_vertical.html  archive_box.html  archive_box_arrow_down.html  archive_box_x_mark.html  arrow_down.html  arrow_down_circle.html  arrow_down_left.html  arrow_down_on_square.html  arrow_down_on_square_stack.html  arrow_down_right.html  arrow_down_tray.html  arrow_left.html  arrow_left_circle.html  arrow_left_end_on_rectangle.html  arrow_left_start_on_rectangle.html  arrow_long_down.html  arrow_long_left.html  arrow_long_right.html  arrow_long_up.html  arrow_path.html  arrow_path_rounded_square.html  arrow_right.html  arrow_right_circle.html  arrow_right_end_on_rectangle.html  arrow_right_start_on_rectangle.html  arrow_top_right_on_square.html  arrow_trending_down.html  arrow_trending_up.html  arrow_turn_down_left.html  arrow_turn_down_right.html  arrow_turn_left_down.html  arrow_turn_left_up.html  arrow_turn_right_down.html  arrow_turn_right_up.html  arrow_turn_up_left.html  arrow_turn_up_right.html  arrow_up.html  arrow_up_circle.html  (+276 more)
astral/templatetags/: astral.py
cotton_daisyui/: command.py
cotton_daisyui/management/commands/: daisy_add.py
cotton_daisyui/templates/cotton/: button.html  loading.html
cotton_daisyui/templates/cotton/daisyui/: button.html  tab.html  tabs.html  tooltip.html
cotton_daisyui/templatetags/: cotton_daisyui.py
example-project/example/: settings.py  urls.py
example-project/example/templates/: index.html
example-project/static/: output.css
scripts/: icon_template.html  populate_icons.py
