[project]
name = "astral"
version = "0.1.0"
description = "Django UI components"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django-cotton>=1.2.0",
    "django>=5.1.2",
]

[project.optional-dependencies]
heroicons = [
    "cotton-heroicons>=0.1.1",
]

[tool.uv]
dev-dependencies = [
    "invoke>=2.2.0",
    "pre-commit>=4.0.1",
    "ruff>=0.6.9",
]
