[project]
name = "cotton-daisyui"
version = "0.1.0"
description = "The DaisyUI Django Cotton Component Library"
readme = "README.md"
requires-python = ">=3.9,<4"
dependencies = [
    "django-cotton>=1.2.0",
    "django>=4.2,<5.2",
]

[project.optional-dependencies]
heroicons = [
    "cotton-heroicons>=0.1.1",
]

[tool.uv]
dev-dependencies = [
    "invoke>=2.2.0",
    "pre-commit>=4.0.1",
    "ruff>=0.6.9",
]
